#1: ADD API-[Get] products; #2: ADD API-[Post] product
